# MJL_HUB

./: .gitignore  .replit  Procfile  main.py  pyproject.toml  render.yaml  replit.md  replit.nix  requirements.txt
.agents/memory/: MEMORY.md  fastapi-starlette-gotchas.md
api/: index.py
app/: activity_log.py  auth.py  config.py  deps.py  info_store.py  main.py  obfuscator.py  schemas.py  scripts_index.py  security.py
app/routers/: admin.py  api.py  pages.py
app/static/css/: style.css
app/static/js/: admin.js  common.js  home.js  login.js  viewer.js
app/templates/: 404.html  admin.html  base.html  index.html  login.html  script.html
info/: +1 Magic Evolution.json  +1ME.json  MJLintroHub.json  README.md  TAC.json  test.json
script/: +1ME.js  AutoFarm.js  InfiniteJump.js  MJLintroHub.js  MainHub.js  TAC.js
script/+1 Magic Evolution/: main.js  sp1.js
script/test/: main.js
