[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "gunicorn>=26.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.51.0",
    "watchdog>=6.0.0",
]
